--- a/angular-contrats/src/app/login/login.component.html
+++ b/angular-contrats/src/app/login/login.component.html
@@ -1,18 +1,19 @@
-<div class="text-center">
+<div class="text-center bg-info vh-100">
   <h1>Gestion les contrats</h1>
-  <form class="was-validated">
+  <form class="was-validated m-5 border border-warning bg-warning rounded-4">
     <div class="custom-control mb-3">
-      <label class="custom-control-label" for="customControlValidationNom" for="username">Utilisateur:</label><br>
+      <label class="custom-control-label m-2" for="customControlValidationNom" for="username">Utilisateur:</label><br>
       <input class="custom-control-input" id="customControlValidationNom" required type="text" id="username" name="username" [(ngModel)]="nom"><br>
       <div class="text-danger" *ngIf="erreurPourNom">Nom d'utiliateur n'existe pas</div>
     </div>
     <div class="was-validated mb-3">
-      <label class="custom-control-label" for="customControlValidationMotDePasse" for="motdepasse">Mot de passe:</label><br>
+      <label class="custom-control-label m-2" for="customControlValidationMotDePasse" for="motdepasse">Mot de passe:</label><br>
       <input class="custom-control-input" id="customControlValidationMotDePasse" required type="text" id="motdepasse" name="motdepasse" [(ngModel)]="motDePasse"><br><br>
       <div class="text-danger" *ngIf="erreurPourMotDePasse">Mot de passe invalide</div>
     </div>
 
-    <input type="submit" value="Submit" (click)="getUtilisateur()"><a routerLink="/creerutilisateur" class="btn btn-link">Créer un utilisateur</a>
+    <input class="btn btn-info text-light mb-5" type="submit" value="Submit" (click)="getUtilisateur()">
+    <a routerLink="/creerutilisateur" class="btn btn-link mb-5">Créer un utilisateur</a>
   </form>
   <p class="text-success" *ngIf="isLogin">login</p>
 </div>
