ajouter une page contrats

--- a/angular-contrats/src/app/menu/menu.component.html
+++ b/angular-contrats/src/app/menu/menu.component.html
@@ -9,9 +9,9 @@
     </div>
   </nav>
   <div class="btn-group-vertical position-absolute top-50 start-50 translate-middle">
-    <button class="m-3 btn btn-info text-light">Les contrats</button>
-    <button class="m-3 btn btn-info text-light">Les contrats expirants</button>
-    <button class="m-3 btn btn-info text-light">Creer un nouveau contrat</button>
+    <a class="m-3 btn btn-info text-light" routerLink="/contrats">Les contrats</a>
+    <a class="m-3 btn btn-info text-light" routerLink="/contratsexpirants">Les contrats expirants</a>
+    <a class="m-3 btn btn-info text-light" routerLink="/creerutilisateur">Creer un nouveau contrat</a>
   </div>
 </div>
 
