--- a/angular-contrats/src/app/creer-utilisateur/creer-utilisateur.component.html
+++ b/angular-contrats/src/app/creer-utilisateur/creer-utilisateur.component.html
@@ -9,7 +9,8 @@
     </div>
     <div class="custom-control mb-3">
       <label class="custom-control-label m-2" for="customControlValidationCourriel">Courriel :</label><br>
-      <input class="custom-control-input" id="customControlValidationCourriel" required type="email" name="email" [(ngModel)]="courriel"><br>
+      <input class="custom-control-input" id="customControlValidationCourriel" required
+             pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,4}$" type="email" name="email" [(ngModel)]="courriel"><br>
       <div class="text-danger" *ngIf="erreurPourCourriel">Courriel invalide</div>
     </div>
     <div class="was-validated mb-3">
