--- a/angular-contrats/src/app/contrats-expirants/contrats-expirants.component.html
+++ b/angular-contrats/src/app/contrats-expirants/contrats-expirants.component.html
@@ -8,7 +8,8 @@
           <button class="btn btn-outline-secondary " type="button" id="button-addon2" (click)="getContratsParNomDuClient()" >Chercher</button>
         </div>
         <div class="col-1"></div>
-        <button class="col-2 mt-2 mb-5 btn btn-danger text-light" (click)="deconnecter()">Deconnecter</button>
+        <button class="col-1 mt-2 mb-5 btn btn-warning text-light" (click)="retourne()">Retourne</button>
+        <button class="col-1 mt-2 mx-3 mb-5 btn btn-danger text-light" (click)="deconnecter()">Deconnecter</button>
       </div>
     </div>
   </nav>
