--- a/angular-contrats/src/app/creer-contrat/creer-contrat.component.html
+++ b/angular-contrats/src/app/creer-contrat/creer-contrat.component.html
@@ -1,7 +1,16 @@
 <div class="container-fluid text-center bg-info vh-100">
+  <nav>
+    <div class="container-fluid">
+      <div class="row">
+        <h1 class="col-2 mb-2">{{nomCourant}}</h1>
+        <div class="col-8"></div>
+        <button class="col-2 mt-2 mb-5 btn btn-danger text-light" (click)="deconnecter()">Deconnecter</button>
+      </div>
+    </div>
+  </nav>
+
   <h1>Créer un contrat</h1>
-  : string;
-  <form class="was-validated m-5 border border-warning bg-warning rounded-4">
+  <form class="was-validated border border-warning bg-warning rounded-4">
     <div class="row">
       <div class="col-3"></div>
       <div class="col-6">
@@ -19,11 +28,38 @@
       <div class="col-6">
         <h5>Date début :</h5>
         <div class="input-group mb-3 mt-2">
-          <input type="date" class="form-control" required  name="dateDebut" [(ngModel)]="contrat.dateDebut">
+          <input type="date" class="form-control" required name="dateDebut" [(ngModel)]="contrat.dateDebut">
         </div>
         <div class="text-danger" *ngIf="erreurPourDateDebut">Date début invalide</div>
       </div>
       <div class="col-3"></div>
+    </div>
+
+    <div>
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+          <h5>Duré le temps :</h5>
+          <div class="row mb-3 mt-2 mx-1">
+            <input class="col-1 form-check-input" type="radio" name="flexRadioDefault"
+                   (change)="changerUnMois()">
+            <div class="col-2">1 mois</div>
+            <input class="col-1 form-check-input" type="radio" name="flexRadioDefault"
+                   (change)="changerTroisMois()">
+            <div class="col-2">3 mois</div>
+            <input class="col-1 form-check-input" type="radio" name="flexRadioDefault"
+                   (change)="changersixMois()">
+            <div class="col-2">6 mois</div>
+            <input class="col-1 form-check-input" type="radio" name="flexRadioDefault"
+                   (change)="changerUneAnnee()">
+            <div class="col-2">1 année</div>
+            <input class="col-1 form-check-input" type="radio" name="flexRadioDefault"
+                   (change)="annulerChangerMois()">
+            <div class="col-2">annuler</div>
+          </div>
+        </div>
+        <div class="col-3"></div>
+      </div>
     </div>
 
     <div class="row">
@@ -31,7 +67,7 @@
       <div class="col-6">
         <h5>Date fin :</h5>
         <div class="input-group mb-3 mt-2">
-          <input type="date" class="form-control" required  name="dateFin" [(ngModel)]="contrat.dateFin">
+          <input type="date" class="form-control" value="{{contrat.dateFin}}" required name="dateFin" [(ngModel)]="contrat.dateFin">
         </div>
         <div class="text-danger" *ngIf="erreurPourDateFin">Date fin invalide</div>
       </div>
@@ -64,8 +100,32 @@
       <div class="col-3"></div>
     </div>
 
+    <div>
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+          <h5>Duré le temps :</h5>
+          <div class="row mb-3 mt-2 mx-1">
+            <input class="form-check-input" type="radio" name="radioDefault"
+                   (change)="modeDuPaiement1mois = !modeDuPaiement1mois">
+            <div class="col-2">1 mois</div>
+            <input class="form-check-input" type="radio" name="radioDefault"
+                   (change)="modeDuPaiement3mois= !modeDuPaiement3mois">
+            <div class="col-2">3 mois</div>
+            <input class="form-check-input" type="radio" name="radioDefault"
+                   (change)="modeDuPaiement6mois= !modeDuPaiement6mois">
+            <div class="col-2">6 mois</div>
+            <input class="form-check-input" type="radio" name="radioDefault"
+                   (change)="modeDuPaiement1anee = !modeDuPaiement1anee">
+            <div class="col-2">1 année</div>
+          </div>
+        </div>
+        <div class="col-3"></div>
+      </div>
+    </div>
+
     <input class="btn btn-info text-light mb-5" type="submit" value="Créer mon compte" (click)="postContrat()">
-    <a routerLink="menu" class="btn btn-link mb-5" (click)="changerPage()" >Retourne</a>
+    <a routerLink="menu" class="btn btn-link mb-5" (click)="changerPage()">Retourne</a>
   </form>
 </div>
 
