ajouter la page oubliermotdepasse

--- a/angular-contrats/src/app/login/login.component.html
+++ b/angular-contrats/src/app/login/login.component.html
@@ -14,6 +14,7 @@
 
     <input class="btn btn-info text-light mb-5" type="submit" value="Submit" (click)="getUtilisateur()">
     <a routerLink="/creerutilisateur" class="btn btn-link mb-5">Créer un utilisateur</a>
+    <a routerLink="/oubliermotdepasse" class="btn btn-link mb-5">Oublier le mot de passe</a>
   </form>
 </div>
 <app-menu *ngIf="getLogin()"></app-menu>
