--- a/angular-contrats/src/app/contrat/contrat.component.html
+++ b/angular-contrats/src/app/contrat/contrat.component.html
@@ -47,7 +47,7 @@
       <div class="col-2">
       </div>
       <div class="col-4">
-        <h3>{{contrat.montant}}</h3>
+        <h3>{{contrat.montant}} $</h3>
       </div>
     </div>
     <div class="row">
