corriger la page expirants

--- a/angular-contrats/src/app/oublier-mot-de-passe/oublier-mot-de-passe.component.html
+++ b/angular-contrats/src/app/oublier-mot-de-passe/oublier-mot-de-passe.component.html
@@ -13,7 +13,7 @@
 <div class="text-center bg-info vh-100"  *ngIf="changeMotDePasse">
   <h1>Gestion les contrats</h1>
   <form class="was-validated m-5 border border-warning bg-warning rounded-4">
-    <div clss="text-success">{{messageChanger}}</div>
+    <h4 class="text-success">{{messageChanger}}</h4>
     <div class="row">
       <div class="col-3"></div>
       <div class="col-6">
