ajoouter nombreMax et nombreMin

--- a/angular-contrats/src/app/contrat/contrat.component.html
+++ b/angular-contrats/src/app/contrat/contrat.component.html
@@ -62,5 +62,5 @@
     </div>
   </div>
   <a class="m-3 btn btn-success text-light" routerLink="/creercontrat">Creer un nouveau contrat</a>
-  <a class="m-3 btn btn-danger text-light" routerLink="/contrats">Retourner</a>
+  <a class="m-3 btn btn-danger text-light" routerLink="/menu">Retourner</a>
 </div>
